# eo-tfy-onboarding

./: .gitignore  pyproject.toml
Module 0 - Setup and Absolute Basics of LLMs (Day1)/: 0.1 Exploring LLMs.ipynb  0.2 LLM Generation Parameters.ipynb
Module 1 - Basics of LLMs (Day1)/: 0.1 Exploring LLMs.ipynb
Module 1 - LangChain Primer (Day1)/: 1.1 - Introduction to LangChain.ipynb
Module 2 - LangChain Primer (Day1)/: 1.1 - Introduction to LangChain.ipynb  1.2 - Structured Output Generation.ipynb
Module 2 - RAG Deep-Dive (Day1)/: 2.1 - RAG Primer.ipynb  2.2 - Advanced RAG Techniques.ipynb
Module 3 - Building Agents with LangGraph (Day2)/: 3.1 - Agents with LangGraph (with small in-session exercise).ipynb  3.2 - Chatbots with LangGraph.ipynb
Module 4 - Building Agents with LangGraph (Day2)/: 3.1 - Agents with LangGraph (with small in-session exercise).ipynb  3.3 - RAG with LangGraph.ipynb
Module 5 - Agentic RAG (Day3)/: 4.1 - RAG Powered Tool Calling.ipynb  4.2 - Agentic RAG with LangGraph (with Solution).ipynb
Module 5 - MCP (Day3)/: 6.1-multi_agent_deep_researcher.ipynb  6.2-financial_analyst(with solution).ipynb
module0 (prereqs) - setup and absolute basics of llms (day1)/: 0.1 Exploring LLMs.ipynb  0.2 LLM Generation Parameters.ipynb
module1 - langchain primer (day1)/: 1.1 - Introduction to LangChain.ipynb  1.2 - Structured Output Generation.ipynb
module2 - rag deepdive (day1)/: 2.2 - Advanced RAG Techniques.ipynb
module3 - building agents with langgraph (day2)/: 3.1 - Agents with LangGraph (with small in-session exercise).ipynb  3.2 - Chatbots with LangGraph.ipynb  3.3 - RAG with LangGraph.ipynb
module4 - agentic rag (day2)/: 4.2 - Agentic RAG with LangGraph (with Exercise).ipynb  4.2 - Agentic RAG with LangGraph (with Solution).ipynb
module6 - mcp (day4 + several handson)/: 6.1-multi_agent_deep_researcher.ipynb  6.2-financial_analyst(with exercise).ipynb  6.2-financial_analyst(with solution).ipynb
(+22 files in other folders)
