[project]
name = "eo-tfy-onboarding"
version = "0.1.0"
description = "This is for onboarding new/existing GenAI developers in the Enterprise Outcomes team at TrueFoundry."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "anthropic>=0.49.0",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
    "bs4>=0.0.2",
    "crewai>=0.177.0",
    "crewai-tools>=0.0.1",
    "faiss-cpu>=1.12.0",
    "google-api-core>=2.25.1",
    "gradio>=5.22.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "langchain-anthropic>=0.3.10",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.9",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "linkup-sdk>=0.2.8",
    "lxml>=5.3.1",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "opentelemetry-exporter-otlp>=1.36.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pi-heif>=1.1.0",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "polygon-api-client>=1.14.5",
    "psutil>=7.0.0",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "semantic-kernel>=1.25.0",
    "sendgrid>=6.11.0",
    "sentence-transformers>=5.1.0",
    "setuptools>=78.1.0",
    "smithery>=0.1.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "unstructured>=0.18.14",
    "unstructured-inference>=1.0.5",
    "unstructured-pytesseract>=0.3.15",
    "wikipedia>=1.4.0",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
